# game-engine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini
.github/workflows/: cmake-single-platform.yml  codeql.yml
glad/include/glad/: glad.h
glad/src/: glad.c
learn-metal/00-window/: 00-window.cpp
learn-metal/01-primitive/: 01-primitive.cpp
learn-metal/03-animation/: 03-animation.cpp
learn-metal/04-instancing/: 04-instancing.cpp
learn-metal/05-perspective/: 05-perspective.cpp
learn-metal/06-lighting/: 06-lighting.cpp
learn-metal/07-texturing/: 07-texturing.cpp
learn-metal/08-compute/: 08-compute.cpp
learn-metal/09-compute-to-render/: 09-compute-to-render.cpp
learn-metal/10-frame-debugging/: 10-frame-debugging.cpp
libs/Catch2/: Makefile  cmake_install.cmake
libs/Catch2/src/: Makefile  cmake_install.cmake
libs/abseil-cpp/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/algorithm/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/base/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/cleanup/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/container/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/crc/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/debugging/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/flags/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/functional/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/hash/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/log/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/memory/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/meta/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/numeric/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/profiling/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/random/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/status/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/strings/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/synchronization/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/time/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/types/: Makefile  cmake_install.cmake
libs/abseil-cpp/absl/utility/: Makefile  cmake_install.cmake
libs/entt/: EnTTConfigVersion.cmake  EnTTTargets.cmake  Makefile  cmake_install.cmake
libs/folly/: cmake_install.cmake  libfolly.pc
libs/folly/folly/: cmake_install.cmake
libs/folly/folly/experimental/exception_tracer/: cmake_install.cmake
libs/folly/folly/logging/example/: cmake_install.cmake
libs/json/: Makefile  cmake_install.cmake
libs/json/docs/mkdocs/: requirements.txt
libs/luacpp/Source/: CMakeLists.txt
libs/soloud/contrib/: Makefile  cmake_install.cmake
mono/: test.cs
sample_project/: 3.3.shader.fs  3.3.shader.vs
scripts/: build.sh  prep_build.sh  run.sh  run_ci.sh  run_e2e.sh  test.sh
src/: basic.cpp  camera.cpp  camera.h  editor_manager.cpp  editor_manager.h  engine.cpp  engine.h  entity.cpp  entity.h  entity_model.cpp  entity_model.h  game.cpp  game.h  input_handler.h  main.cpp  model.h  model_basic.cpp  model_basic.h  model_complex.cpp  model_complex.h  opengl.h  project.cpp  project.h  shader.cpp  shader.h  shader_basic.cpp  shader_basic.h  shader_complex.cpp  shader_complex.h  sound.cpp  window.h  window_opengl.cpp  window_opengl.h
src/core/: asset.cpp  asset.h  camera.cpp  camera.h  editor_manager.cpp  editor_manager.h  engine.cpp  engine.h  entities.h  entity.cpp  entity.h  entity_camera.cpp  entity_camera.h  entity_model.cpp  entity_model.h  events.h  game.cpp  game.h  json_export.cpp  json_export.h  model.h  model_basic.h  model_complex.cpp  model_complex.h  model_cube.h  project.cpp  project.h  script.h  shader.h  sound.cpp  window.h  window_opengl.cpp  window_opengl.h  world.cpp  world.h
src/core/editor/: asset_editor_plugin.cpp  asset_editor_plugin.h  asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  camera2.cpp  camera2.h  editor_manager.cpp  editor_manager.h  plugin.h  script_editor_plugin.cpp  script_editor_plugin.h  script_manager.cpp  script_manager.h  world_editor_plugin.cpp  world_editor_plugin.h  world_manager.cpp  world_manager.h
src/core/serialization/: exporter.cpp  exporter.h  importer.cpp  importer.h
src/core/shaders/: shader.cpp  shader.h  shader_generator.cpp  shader_generator.h
tests/: entity_tests.cpp  model_tests.cpp  save_tests.cpp  tests.cpp
